# wttu

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: cli.rs  main.rs
src/cli_tool_data/: mac.json  windows.json
src/cli_tools/: linux-general.json  windows.json
src/json_platform_data/: cli-suggestions-data-template.json  linux-general.json  mac.json  windows.json
