[package]
name = "wttu"
version = "0.1.3"
edition = "2021"
authors = ["punctuationmarks <ironistdesign@pm.me>"]
license = "MIT OR Apache-2.0"
description = "What Tool to Use? This is a tool to help guide you when you know what you want to do, but not sure what to tool to use."
readme = "README.md"
homepage = "https://github.com/punctuationmarks/wttu"
repository = "https://github.com/punctuationmarks/wttu"
keywords = ["cli", "meta"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
# this might just be good for sys file autocomplete
# clap_autocomplete = "0.4.0"
# clap_complete = "4.0.3"
# clap_generate = "3.0.3"
serde_json = "1.0.87"
# used for string to enum
# strum = "0.24.1"
# serde="1.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
assert_fs = "1.0"
